# PhoenixKiller

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: extract_gpu_info.h  get_process_info.h  gpu_pid.h  nv_time.h  platform.h  uthash.h  util.h
modules/: FindNVML.cmake
src/: CMakeLists.txt  InstallService.cmake  extract_gpu_info.c  get_process_info_linux.c  main.cpp  util.cpp
src/gpupid/: gpu_pid.cpp  main.cpp
